--- a/projetos.html
+++ b/projetos.html
@@ -33,15 +33,15 @@
                 <div class="coluna-1">
                     <a href="front-end/front-end.html">
                         <p class="coluna-1-conteudo"><strong class="conteudo-projetos-destaque">01</strong>
-                            Front-end</p>
+                            HTML</p>
                     </a>
-                    <a href="#">
-                        <p class="coluna-1-conteudo"><strong class="conteudo-projetos-destaque">02</strong> Back-end
+                    <a href="css/css-page1.html">
+                        <p class="coluna-1-conteudo"><strong class="conteudo-projetos-destaque">02</strong> CSS
                         </p>
                     </a>
                     <a href="#">
                         <p class="coluna-1-conteudo"><strong class="conteudo-projetos-destaque">03</strong>
-                            Portugoul</p>
+                            Java</p>
                     </a>
                 </div>
                 <div class="coluna-2">
@@ -51,7 +51,7 @@
                     </a>
 
                     <a href="#">
-                        <p class="coluna-2-conteudo"><strong class="conteudo-projetos-destaque">05</strong> Java</p>
+                        <p class="coluna-2-conteudo"><strong class="conteudo-projetos-destaque">05</strong> Portugoul</p>
                     </a>
                     <a href="#">
                         <p class="coluna-2-conteudo"><strong class="conteudo-projetos-destaque">06</strong> SQL</p>
