--- a/css/css-page11.html
+++ b/css/css-page11.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <section class="conteudo-css">
+
+    <section class="conteudo-css-page11">
 
         <div class="header-css">
             <div class="cabecalho-css">
@@ -31,21 +32,29 @@
             </div>
         </div>
 
+        <div class="conteudo-css-pratica-explicacao">
+            <h1 class="titulo-conteudo-css-pratica-explicacao">Atividade Prática: Estilizando Tags HTML com CSS</h1>
+            <div class="conteudo-css-pratica-explicacao-container">
+                <div class="subtitulo-conteudo-css-pratica-explicacao2-coluna1">
+                    <p>Dentro do &lt;body&gt;, adicione uma tag &lt;h1&gt; com um título de sua escolha:</p>
+                    <p>&lt;h1&gt;Este é um Título em Vermelho&lt;/h1&gt;</p>
 
-        <div class="conteudo-css-introducao">
-            <h1 class="titulo-css-introducao">Domine o Estilo: Aprendendo os Fundamentos do CSS</h1>
+                </div>
+                <div class="subtitulo-conteudo-css-pratica-explicacao2-coluna2">
+                    <p>Abaixo do &lt;h1&gt;, adicione uma tag &lt;p&gt; com um parágrafo de texto:</p>
+                    <p>&lt;p&gt;Este é um parágrafo em roxo.&lt;/p&gt;</p>
+                </p>
 
-            <p class="subtitulo-css-introducao">O CSS (Cascading Style Sheets) é uma linguagem de folha de estilo usada
-                para controlar a aparência e o layout de elementos HTML em uma página web. Nesta lição, vamos explorar
-                os conceitos fundamentais do CSS e aprender como aplicar estilos a elementos HTML.
-            </p>
+                </div>
+            </div>
+
 
         </div>
 
         <div class="buttons">
             <div class="button-front-end">
                 <button class="button-proxima-pagina">
-                    <a href="css-page2.html">
+                    <a href="css-page12.html">
                         Próxima Pagina
                     </a>
                 </button>
@@ -53,7 +62,7 @@
 
             <div class="button-front-end">
                 <button class="button-voltar-pagina">
-                    <a href="../projetos.html">
+                    <a href="css-page10.html">
                         Voltar Pagina
                     </a>
                 </button>
@@ -65,9 +74,6 @@
         </footer>
 
     </section>
-
-
-
 
 </body>
 
