--- a/css/css-page12.html
+++ b/css/css-page12.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <section class="conteudo-css">
+
+    <section class="conteudo-css-page12">
 
         <div class="header-css">
             <div class="cabecalho-css">
@@ -31,21 +32,31 @@
             </div>
         </div>
 
-
-        <div class="conteudo-css-introducao">
-            <h1 class="titulo-css-introducao">Domine o Estilo: Aprendendo os Fundamentos do CSS</h1>
-
-            <p class="subtitulo-css-introducao">O CSS (Cascading Style Sheets) é uma linguagem de folha de estilo usada
-                para controlar a aparência e o layout de elementos HTML em uma página web. Nesta lição, vamos explorar
-                os conceitos fundamentais do CSS e aprender como aplicar estilos a elementos HTML.
-            </p>
-
+        <div class="conteudo-css-pratica-explicacao3">
+            <h1 class="titulo-conteudo-css-pratica-explicacao3">Atividade Prática: Estilizando Tags HTML com CSS</h1>
         </div>
+
+        <div class="subtitulo-css-pratica-explicacao3">
+            <p>Atividade Opcional: <br> <br>
+
+                Adicionando um Fundo Cinza
+                Para uma atividade opcional, você pode pedir aos alunos que adicionem um fundo cinza à página. Basta
+                adicionar uma nova regra CSS para o
+
+                &lt;body&gt;: <br> <br>
+
+                    body { <br>
+                    background-color: lightgray; <br>
+                    }
+
+            </p>
+        </div>
+
 
         <div class="buttons">
             <div class="button-front-end">
                 <button class="button-proxima-pagina">
-                    <a href="css-page2.html">
+                    <a href="css-page-conclusao.html">
                         Próxima Pagina
                     </a>
                 </button>
@@ -53,7 +64,7 @@
 
             <div class="button-front-end">
                 <button class="button-voltar-pagina">
-                    <a href="../projetos.html">
+                    <a href="css-page11.html">
                         Voltar Pagina
                     </a>
                 </button>
@@ -65,9 +76,6 @@
         </footer>
 
     </section>
-
-
-
 
 </body>
 
