--- a/css/css-page2.html
+++ b/css/css-page2.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <section class="conteudo-css">
+
+    <section class="conteudo-css-page2">
 
         <div class="header-css">
             <div class="cabecalho-css">
@@ -32,20 +33,24 @@
         </div>
 
 
-        <div class="conteudo-css-introducao">
-            <h1 class="titulo-css-introducao">Domine o Estilo: Aprendendo os Fundamentos do CSS</h1>
-
-            <p class="subtitulo-css-introducao">O CSS (Cascading Style Sheets) é uma linguagem de folha de estilo usada
-                para controlar a aparência e o layout de elementos HTML em uma página web. Nesta lição, vamos explorar
-                os conceitos fundamentais do CSS e aprender como aplicar estilos a elementos HTML.
-            </p>
+        <div class="conteudo-css-sumario">
+            <h1 class="titulo-css-sumario">Explorando o Mundo do CSS: Fundamentos e Mais</h1>
+            <div class="subtitulo-css-conteudo">
+                <p class="subtitulo-css-sumario">Objetivos:</p>
+                <p class="paragrafos-css-sumario"><Strong class="titulo-destaque">01</Strong> Desvendando
+                    Seletores CSS</p>
+                <p class="paragrafos-css-sumario"><Strong class="titulo-destaque">02</Strong> Mestre das
+                    Propriedades e Valores do CSS</p>
+                <p class="paragrafos-css-sumario"><Strong class="titulo-destaque">03</Strong> Alinhamento de
+                    Elementos com Elegância</p>
+            </div>
 
         </div>
 
         <div class="buttons">
             <div class="button-front-end">
                 <button class="button-proxima-pagina">
-                    <a href="css-page2.html">
+                    <a href="css-page3.html">
                         Próxima Pagina
                     </a>
                 </button>
@@ -53,7 +58,7 @@
 
             <div class="button-front-end">
                 <button class="button-voltar-pagina">
-                    <a href="../projetos.html">
+                    <a href="css-page1.html">
                         Voltar Pagina
                     </a>
                 </button>
@@ -65,9 +70,6 @@
         </footer>
 
     </section>
-
-
-
 
 </body>
 
