--- a/css/css-page3.html
+++ b/css/css-page3.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <section class="conteudo-css">
+
+    <section class="conteudo-css-page3">
 
         <div class="header-css">
             <div class="cabecalho-css">
@@ -32,20 +33,26 @@
         </div>
 
 
-        <div class="conteudo-css-introducao">
-            <h1 class="titulo-css-introducao">Domine o Estilo: Aprendendo os Fundamentos do CSS</h1>
+        <div class="conteudo-css-seletores">
+            <h1 class="titulo-css-seletores"><Strong class="titulo-destaque">01</Strong> Seletores CSS:</h1>
 
-            <p class="subtitulo-css-introducao">O CSS (Cascading Style Sheets) é uma linguagem de folha de estilo usada
-                para controlar a aparência e o layout de elementos HTML em uma página web. Nesta lição, vamos explorar
-                os conceitos fundamentais do CSS e aprender como aplicar estilos a elementos HTML.
-            </p>
+            <div class="subtitulos-css-seletores">
+
+                <p class="subtitulos-css-seleteroes-paragrafo1">Os seletores CSS são usados para identificar os elementos HTML que você deseja estilizar. Eles podem
+                    ser baseados em tags, classes, IDs ou outros atributos. Aqui estão alguns exemplos de seletores CSS:
+                </p> <br>
+
+                <p>Seletor de tag: p (estiliza todos os parágrafos na página).</p> <br>
+                <p>Seletor de classe: .destaque (estiliza elementos com a classe "destaque").</p><br>
+                <p>Seletor de ID: #cabecalho (estiliza o elemento com o ID "cabecalho").</p> <br>
+            </div>
 
         </div>
 
         <div class="buttons">
             <div class="button-front-end">
                 <button class="button-proxima-pagina">
-                    <a href="css-page2.html">
+                    <a href="css-page4.html">
                         Próxima Pagina
                     </a>
                 </button>
@@ -53,7 +60,7 @@
 
             <div class="button-front-end">
                 <button class="button-voltar-pagina">
-                    <a href="../projetos.html">
+                    <a href="css-page2.html">
                         Voltar Pagina
                     </a>
                 </button>
@@ -65,9 +72,6 @@
         </footer>
 
     </section>
-
-
-
 
 </body>
 
