--- a/css/css-page4.html
+++ b/css/css-page4.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <section class="conteudo-css">
+
+    <section class="conteudo-css-page4">
 
         <div class="header-css">
             <div class="cabecalho-css">
@@ -32,20 +33,32 @@
         </div>
 
 
-        <div class="conteudo-css-introducao">
-            <h1 class="titulo-css-introducao">Domine o Estilo: Aprendendo os Fundamentos do CSS</h1>
+        <div class="conteudo-css-seletores-2">
+            <h1 class="titulo-css-seletores-2">Seletores CSS:</h1>
 
-            <p class="subtitulo-css-introducao">O CSS (Cascading Style Sheets) é uma linguagem de folha de estilo usada
-                para controlar a aparência e o layout de elementos HTML em uma página web. Nesta lição, vamos explorar
-                os conceitos fundamentais do CSS e aprender como aplicar estilos a elementos HTML.
-            </p>
+            <div class="subtitulo-css-seletores-html">
+                <h1>HTML</h1>
+                <img class="subtitulo-css-seletores-html-img" src="../assets/img-seletores-html.png"
+                    alt="img referente html">
+            </div>
+
+            <div class="subtitulos-css-seletores-css-web">
+                <div class="subtitulos-css-seletores-css">
+                    <h1>CSS</h1>
+                    <img src="../assets/img-seletores-css.png" alt="img referente css">
+                </div>
+                <div class="subtitulos-css-seletores-web">
+                    <h1>WEB</h1>
+                    <img src="../assets/img-seletores-web.png" alt="img referente web">
+                </div>
+            </div>
 
         </div>
 
         <div class="buttons">
             <div class="button-front-end">
                 <button class="button-proxima-pagina">
-                    <a href="css-page2.html">
+                    <a href="css-page5.html">
                         Próxima Pagina
                     </a>
                 </button>
@@ -53,21 +66,16 @@
 
             <div class="button-front-end">
                 <button class="button-voltar-pagina">
-                    <a href="../projetos.html">
+                    <a href="css-page3.html">
                         Voltar Pagina
                     </a>
                 </button>
             </div>
         </div>
 
-        <footer class="footer-img">
-            <img src="../assets/footer_quadrados.png" alt="">
-        </footer>
+
 
     </section>
-
-
-
 
 </body>
 
