--- a/css/css-page5.html
+++ b/css/css-page5.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <section class="conteudo-css">
+
+    <section class="conteudo-css-page5">
 
         <div class="header-css">
             <div class="cabecalho-css">
@@ -31,21 +32,29 @@
             </div>
         </div>
 
+        <div class="conteudo-css-propriedades-valores">
+            <h1 class=titulo-conteudo-css-priedades-valores><strong class="titulo-destaque">02</strong> Propriedades e
+                Valores CSS:</h1>
 
-        <div class="conteudo-css-introducao">
-            <h1 class="titulo-css-introducao">Domine o Estilo: Aprendendo os Fundamentos do CSS</h1>
-
-            <p class="subtitulo-css-introducao">O CSS (Cascading Style Sheets) é uma linguagem de folha de estilo usada
-                para controlar a aparência e o layout de elementos HTML em uma página web. Nesta lição, vamos explorar
-                os conceitos fundamentais do CSS e aprender como aplicar estilos a elementos HTML.
-            </p>
-
+            <p class="subtitulo-conteudo-css-priedades-valores">As propriedades CSS são usadas para definir os estilos
+                dos elementos selecionados, e os valores
+                especificam como essas propriedades devem ser aplicadas. Por exemplo:</p>
         </div>
+
+        <div class="subtitulo2-conteudo-css-priedades-valores">
+            <img src="../assets/img-css-page5.png" alt="img conteudo page5">
+
+            <p class="subtitulo2-paragrafo-conteudo-css-priedades-valores">p {<br><br>&nbsp&nbsp&nbspcolor: red; Define a cor do texto para vermelho <br><br> &nbsp&nbsp&nbspfont-size: 16px;  Define o tamanho da fonte para 16 pixels <br><br> }
+            
+            </p>
+        </div>
+
+        <p class="subtitulo3-paragrafo-conteudo-css-priedades-valores">Neste exemplo, color e font-size são propriedades CSS, enquanto "red" e "16px" são os valores associados a essas propriedades.</p>
 
         <div class="buttons">
             <div class="button-front-end">
                 <button class="button-proxima-pagina">
-                    <a href="css-page2.html">
+                    <a href="css-page6.html">
                         Próxima Pagina
                     </a>
                 </button>
@@ -53,21 +62,16 @@
 
             <div class="button-front-end">
                 <button class="button-voltar-pagina">
-                    <a href="../projetos.html">
+                    <a href="css-page4.html">
                         Voltar Pagina
                     </a>
                 </button>
             </div>
         </div>
 
-        <footer class="footer-img">
-            <img src="../assets/footer_quadrados.png" alt="">
-        </footer>
+
 
     </section>
-
-
-
 
 </body>
 
