--- a/css/css-page6.html
+++ b/css/css-page6.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <section class="conteudo-css">
+
+    <section class="conteudo-css-page6">
 
         <div class="header-css">
             <div class="cabecalho-css">
@@ -31,21 +32,23 @@
             </div>
         </div>
 
+        <div class="conteudo-css-alinhamento">
+            <h1 class="titulo-conteudo-css-alinhamento"><strong class="titulo-destaque">03</strong>
+                Alinhamento de Elementos:</h1>
 
-        <div class="conteudo-css-introducao">
-            <h1 class="titulo-css-introducao">Domine o Estilo: Aprendendo os Fundamentos do CSS</h1>
+            <p class="subtitulo-conteudo-css-alinhamento">Você pode alinhar seletores para estilizar elementos
+                específicos dentro de outros elementos. Por exemplo:</p>
+        </div>
 
-            <p class="subtitulo-css-introducao">O CSS (Cascading Style Sheets) é uma linguagem de folha de estilo usada
-                para controlar a aparência e o layout de elementos HTML em uma página web. Nesta lição, vamos explorar
-                os conceitos fundamentais do CSS e aprender como aplicar estilos a elementos HTML.
-            </p>
-
+        <div class="subtitulo2-conteudo-css-alinhamento">
+            <img class="img2-subtitulo2-conteudo-css-alinhamento" src="../assets/img-css-alinhamento-2.png" alt="img-2 conteudo page6">
+            <img class="img1-subtitulo2-conteudo-css-alinhamento" src="../assets/img-css-alinhamento-1.png" alt="img-1 conteudo page6">
         </div>
 
         <div class="buttons">
             <div class="button-front-end">
                 <button class="button-proxima-pagina">
-                    <a href="css-page2.html">
+                    <a href="css-page7.html">
                         Próxima Pagina
                     </a>
                 </button>
@@ -53,21 +56,16 @@
 
             <div class="button-front-end">
                 <button class="button-voltar-pagina">
-                    <a href="../projetos.html">
+                    <a href="css-page5.html">
                         Voltar Pagina
                     </a>
                 </button>
             </div>
         </div>
 
-        <footer class="footer-img">
-            <img src="../assets/footer_quadrados.png" alt="">
-        </footer>
+        
 
     </section>
-
-
-
 
 </body>
 
