--- a/css/css-page8.html
+++ b/css/css-page8.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <section class="conteudo-css">
+
+    <section class="conteudo-css-page8">
 
         <div class="header-css">
             <div class="cabecalho-css">
@@ -31,21 +32,19 @@
             </div>
         </div>
 
-
-        <div class="conteudo-css-introducao">
-            <h1 class="titulo-css-introducao">Domine o Estilo: Aprendendo os Fundamentos do CSS</h1>
-
-            <p class="subtitulo-css-introducao">O CSS (Cascading Style Sheets) é uma linguagem de folha de estilo usada
-                para controlar a aparência e o layout de elementos HTML em uma página web. Nesta lição, vamos explorar
-                os conceitos fundamentais do CSS e aprender como aplicar estilos a elementos HTML.
-            </p>
+        <div class="conteudo-css-pratica-exercicio">
+            <h1 class="titulo-conteudo-css-pratica-exercicio">Atividade Prática: Estilizando Tags HTML com CSS</h1>
+            <p>Objetivo: Estilizar a tag
+                &lt;h1&gt; com a cor vermelha e a tag &lt;p&gt; com a cor roxa em uma página HTML.</p>
+            <p>1. Abra seu arquivo HTML anterior ou crie um novo.</p>
+            <p>2. Dentro do &lt;head&gt;, adicione um elemento &lt;style&gt; para incluir suas regras CSS. </p>
 
         </div>
 
         <div class="buttons">
             <div class="button-front-end">
                 <button class="button-proxima-pagina">
-                    <a href="css-page2.html">
+                    <a href="css-page9.html">
                         Próxima Pagina
                     </a>
                 </button>
@@ -53,7 +52,7 @@
 
             <div class="button-front-end">
                 <button class="button-voltar-pagina">
-                    <a href="../projetos.html">
+                    <a href="css-page7.html">
                         Voltar Pagina
                     </a>
                 </button>
@@ -65,9 +64,6 @@
         </footer>
 
     </section>
-
-
-
 
 </body>
 
