--- a/css/css-page9.html
+++ b/css/css-page9.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <section class="conteudo-css">
+
+    <section class="conteudo-css-page9">
 
         <div class="header-css">
             <div class="cabecalho-css">
@@ -23,7 +24,7 @@
 
 
             </div>
-
+            
 
             <div class="logo-css">
                 <h1 class="css-titutlo">CSS</h1>
@@ -31,21 +32,27 @@
             </div>
         </div>
 
-
-        <div class="conteudo-css-introducao">
-            <h1 class="titulo-css-introducao">Domine o Estilo: Aprendendo os Fundamentos do CSS</h1>
-
-            <p class="subtitulo-css-introducao">O CSS (Cascading Style Sheets) é uma linguagem de folha de estilo usada
-                para controlar a aparência e o layout de elementos HTML em uma página web. Nesta lição, vamos explorar
-                os conceitos fundamentais do CSS e aprender como aplicar estilos a elementos HTML.
-            </p>
-
+        <div class="conteudo-css-pratica-exemplo">
+            <h1 class="titulo-conteudo-css-pratica-exemplo">Atividade Prática: Estilizando Tags HTML com CSS</h1>
+            <p> HTML <br><br>
+                &lt;!DOCTYPE html&gt;<br>
+                &lt;html&gt;<br>
+                &lt;head&gt;<br>
+                &lt;title&gt;Meu Projeto&lt;/title&gt;<br>
+                &lt;style&gt;<br><br>
+                /* Seu codigo CSS */<br><br>
+                &lt;/style&gt;<br>
+                &lt;/head&gt;<br>
+                &lt;body&gt;<br><br>
+                /* Seu codigo HTML */<br><br>
+                &lt;/body&gt;<br>
+                &lt;/html&gt;</p>
         </div>
 
         <div class="buttons">
             <div class="button-front-end">
                 <button class="button-proxima-pagina">
-                    <a href="css-page2.html">
+                    <a href="css-page10.html">
                         Próxima Pagina
                     </a>
                 </button>
@@ -53,21 +60,16 @@
 
             <div class="button-front-end">
                 <button class="button-voltar-pagina">
-                    <a href="../projetos.html">
+                    <a href="css-page8.html">
                         Voltar Pagina
                     </a>
                 </button>
             </div>
         </div>
 
-        <footer class="footer-img">
-            <img src="../assets/footer_quadrados.png" alt="">
-        </footer>
+
 
     </section>
-
-
-
 
 </body>
 
