--- a/index.html
+++ b/index.html
@@ -48,26 +48,7 @@
 
             </div>
 
-            <div class="container-quadrados-header">
-
-                <div class="linha-1">
-                    <div class="quadrado-1"></div>
-                    <div class="quadrado-2"></div>
-                    <div class="quadrado-3"></div>
-                </div>
-
-
-                <div class="linha-2">
-                    <div class="quadrado-4"></div>
-                    <div class="quadrado-5"></div>
-                </div>
-
-                <div class="linha-3">
-                    <div class="quadrado-6"></div>
-                </div>
-
-
-            </div>
+            <img class="header_quadrados_home" src="assets/header_quadrados_home.png" alt="">
 
         </section>
 
@@ -84,7 +65,6 @@
                     </div>
                 </div>
             </div>
-
         </footer>
 
 
