--- a/java/java-page8.html
+++ b/java/java-page8.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-    <section class="conteudo-css">
+    <section class="conteudo-java-page8">
 
-        <div class="header-css">
-            <div class="cabecalho-css">
+        <div class="header-java">
+            <div class="cabecalho-java">
                 <nav class="cabecalho-navegacao">
                     <ul>
-                        <a class="cabecalho-css-home" href="../index.html">Home</a>
+                        <a class="cabecalho-java-home" href="../index.html">Home</a>
 
                     </ul>
                 </nav>
@@ -25,27 +25,30 @@
             </div>
 
 
-            <div class="logo-css">
-                <h1 class="css-titutlo">CSS</h1>
-                <img class="img-css" src="../assets/logo_css.png" alt="">
+            <div class="logo-java">
+                <img class="img-css" src="../assets/logo-java.png" alt="logo java">
             </div>
         </div>
 
 
-        <div class="conteudo-css-introducao">
-            <h1 class="titulo-css-introducao">Domine o Estilo: Aprendendo os Fundamentos do CSS</h1>
+        <div class="conteudo-java-orientacao">
+            <h1 class="conteudo-java-orientacao-titulo">7. Orientação a objetos:</h1>
 
-            <p class="subtitulo-css-introducao">O CSS (Cascading Style Sheets) é uma linguagem de folha de estilo usada
-                para controlar a aparência e o layout de elementos HTML em uma página web. Nesta lição, vamos explorar
-                os conceitos fundamentais do CSS e aprender como aplicar estilos a elementos HTML.
+            <p class="conteudo-java-orientacao-subtitulo1">Java é uma linguagem orientada a objetos. Você pode criar
+                classes e objetos para modelar seu programa.
             </p>
-
         </div>
+
+        <div class="conteudo-java-tratamento">
+            <h1 class="conteudo-java-tratamento-titulo">8. Tratamento de exceções:</h1>
+            <p class="conteudo-java-tratamento-subtitulo1">Java permite lidar com erros usando blocos try e catch para tratar exceções.</p>
+        </div>
+
 
         <div class="buttons">
             <div class="button-front-end">
                 <button class="button-proxima-pagina">
-                    <a href="css-page2.html">
+                    <a href="java-page9.html">
                         Próxima Pagina
                     </a>
                 </button>
@@ -53,7 +56,7 @@
 
             <div class="button-front-end">
                 <button class="button-voltar-pagina">
-                    <a href="../projetos.html">
+                    <a href="java-page7.html">
                         Voltar Pagina
                     </a>
                 </button>
