--- a/projetos.html
+++ b/projetos.html
@@ -39,7 +39,7 @@
                         <p class="coluna-1-conteudo"><strong class="conteudo-projetos-destaque">02</strong> CSS
                         </p>
                     </a>
-                    <a href="#">
+                    <a href="java/java-page1.html">
                         <p class="coluna-1-conteudo"><strong class="conteudo-projetos-destaque">03</strong>
                             Java</p>
                     </a>
