--- a/css/css-page10.html
+++ b/css/css-page10.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <section class="conteudo-css">
+
+    <section class="conteudo-css-page10">
 
         <div class="header-css">
             <div class="cabecalho-css">
@@ -31,21 +32,30 @@
             </div>
         </div>
 
+        <div class="conteudo-css-pratica-explicacao">
+            <h1 class="titulo-conteudo-css-pratica-explicacao">Atividade Prática: Estilizando Tags HTML com CSS</h1>
+            <div class="conteudo-css-pratica-explicacao-container">
+                <div class="subtitulo-conteudo-css-pratica-explicacao-coluna1">
+                    <p class="subtitulo-conteudo-css-pratica-explicacao-coluna1-paragrafo1">Dentro da tag &lt;style&gt;, adicione um seletor para a tag &lt;h1&gt; e defina a propriedade
+                        color como "red" para tornar o texto vermelho:</p>
+                    <p class="subtitulo-conteudo-css-pratica-explicacao-coluna1-paragrafo2">h1 {<br>color: red;<br>}</p>
 
-        <div class="conteudo-css-introducao">
-            <h1 class="titulo-css-introducao">Domine o Estilo: Aprendendo os Fundamentos do CSS</h1>
+                </div>
+                <div class="subtitulo-conteudo-css-pratica-explicacao-coluna2">
+                    <p>Abaixo, adicione um seletor para a tag &lt;p&gt; e defina a propriedade color como "purple" para
+                        tornar o texto roxo:</p>
+                    <p>p {<br>color: purple;<br>}</p>
 
-            <p class="subtitulo-css-introducao">O CSS (Cascading Style Sheets) é uma linguagem de folha de estilo usada
-                para controlar a aparência e o layout de elementos HTML em uma página web. Nesta lição, vamos explorar
-                os conceitos fundamentais do CSS e aprender como aplicar estilos a elementos HTML.
-            </p>
+                </div>
+            </div>
+
 
         </div>
 
         <div class="buttons">
             <div class="button-front-end">
                 <button class="button-proxima-pagina">
-                    <a href="css-page2.html">
+                    <a href="css-page11.html">
                         Próxima Pagina
                     </a>
                 </button>
@@ -53,7 +63,7 @@
 
             <div class="button-front-end">
                 <button class="button-voltar-pagina">
-                    <a href="../projetos.html">
+                    <a href="css-page9.html">
                         Voltar Pagina
                     </a>
                 </button>
@@ -65,9 +75,6 @@
         </footer>
 
     </section>
-
-
-
 
 </body>
 
