--- a/css/css-page7.html
+++ b/css/css-page7.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <section class="conteudo-css">
+
+    <section class="conteudo-css-page7">
 
         <div class="header-css">
             <div class="cabecalho-css">
@@ -31,21 +32,16 @@
             </div>
         </div>
 
+        <div class="conteudo-css-pratica">
 
-        <div class="conteudo-css-introducao">
-            <h1 class="titulo-css-introducao">Domine o Estilo: Aprendendo os Fundamentos do CSS</h1>
-
-            <p class="subtitulo-css-introducao">O CSS (Cascading Style Sheets) é uma linguagem de folha de estilo usada
-                para controlar a aparência e o layout de elementos HTML em uma página web. Nesta lição, vamos explorar
-                os conceitos fundamentais do CSS e aprender como aplicar estilos a elementos HTML.
-            </p>
-
+            <p class="conteudo-css-pratica-subtitulo">"Vamos colocar nossos conhecimentos em prática! Na atividade a seguir, você aplicará estilos CSS para
+                personalizar a aparência de tags HTML específicas."</p>
         </div>
 
         <div class="buttons">
             <div class="button-front-end">
                 <button class="button-proxima-pagina">
-                    <a href="css-page2.html">
+                    <a href="css-page8.html">
                         Próxima Pagina
                     </a>
                 </button>
@@ -53,7 +49,7 @@
 
             <div class="button-front-end">
                 <button class="button-voltar-pagina">
-                    <a href="../projetos.html">
+                    <a href="css-page6.html">
                         Voltar Pagina
                     </a>
                 </button>
@@ -65,9 +61,6 @@
         </footer>
 
     </section>
-
-
-
 
 </body>
 
