--- a/java/java-page6.html
+++ b/java/java-page6.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-    <section class="conteudo-css">
+    <section class="conteudo-java-page6">
 
-        <div class="header-css">
-            <div class="cabecalho-css">
+        <div class="header-java">
+            <div class="cabecalho-java">
                 <nav class="cabecalho-navegacao">
                     <ul>
-                        <a class="cabecalho-css-home" href="../index.html">Home</a>
+                        <a class="cabecalho-java-home" href="../index.html">Home</a>
 
                     </ul>
                 </nav>
@@ -25,27 +25,30 @@
             </div>
 
 
-            <div class="logo-css">
-                <h1 class="css-titutlo">CSS</h1>
-                <img class="img-css" src="../assets/logo_css.png" alt="">
+            <div class="logo-java">
+                <img class="img-css" src="../assets/logo-java.png" alt="logo java">
             </div>
         </div>
 
 
-        <div class="conteudo-css-introducao">
-            <h1 class="titulo-css-introducao">Domine o Estilo: Aprendendo os Fundamentos do CSS</h1>
+        <div class="conteudo-java-funcoes">
+            <h1 class="conteudo-java-funcoes-titulo">5. Funções (métodos):</h1>
 
-            <p class="subtitulo-css-introducao">O CSS (Cascading Style Sheets) é uma linguagem de folha de estilo usada
-                para controlar a aparência e o layout de elementos HTML em uma página web. Nesta lição, vamos explorar
-                os conceitos fundamentais do CSS e aprender como aplicar estilos a elementos HTML.
+            <p class="conteudo-java-funcoes-subtitulo1">Você pode criar funções (ou métodos) para dividir o código em
+                partes reutilizáveis. Exemplo:
             </p>
-
+            <p class="conteudo-java-funcoes-subtitulo2">
+                public static int soma(int a, int b) { <br>
+                &nbsp;&nbsp;&nbsp;return a + b; <br>
+                }
+            </p>
         </div>
+
 
         <div class="buttons">
             <div class="button-front-end">
                 <button class="button-proxima-pagina">
-                    <a href="css-page2.html">
+                    <a href="java-page7.html">
                         Próxima Pagina
                     </a>
                 </button>
@@ -53,17 +56,15 @@
 
             <div class="button-front-end">
                 <button class="button-voltar-pagina">
-                    <a href="../projetos.html">
+                    <a href="java-page5.html">
                         Voltar Pagina
                     </a>
                 </button>
             </div>
         </div>
-
         <footer class="footer-img">
             <img src="../assets/footer_quadrados.png" alt="">
         </footer>
-
     </section>
 
 
